# swagger/swagger.yaml
@@ -223,7 +223,7 @@ paths:
           description: ID of project to update
           required: true
           type: string
-          format: uuid
+          format: guid
         - name: additionalMetadata
           in: formData
           description: Additional data to pass to server
@@ -458,17 +458,12 @@ definitions:
         type: string
         example: big big description
   ProjectDetail:
+    allOf:
+    - $ref: '#/definitions/Project'
+    - type: object
+      discriminator: resource_type
     properties:
-      id:
-        type: string
-        format: uuid
-      title:
-        type: string
-        example: translate text from English to Spanish
-      description:
-        type: string
-        example: big big description
-      files:  
+      files:
         type: array
         items:
           type: string
